tests/macros/int/extension.stderr
error: option `extension` does not exist for kind `int`
 --> $DIR/extension.rs:2:43
  |
2 |     let q = inquisition::questions![int { extension: todo!() }];
  |                                           ^^^^^^^^^
