tests/macros/int/extension.rs
fn main() {
    let q = inquisition::questions![int { extension: todo!() }];
}
